# c-text-editor

./: .gitignore  CMakeLists.txt
Header/: memoryManager.cpp.h
Headers/: Doxyfile  Reader.h  TcpClient.h  TcpServer.h  mainwindow.h  memoryManager.h  node.h
Headers/html/: Reader_8h_source.html  TcpClient_8h_source.html  TcpServer_8h_source.html  annotated.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.dot  classReader-members.html  classReader.html  classTcpClient-members.html  classTcpClient.html  classTcpClient__inherit__graph.dot  classTcpServer-members.html  classTcpServer.html  classTcpServer__inherit__graph.dot  classes.html  classmemoryManager-members.html  classmemoryManager.html  classnode-members.html  classnode.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_4.dot  inherits.html  mainwindow_8h_source.html  memoryManager_8h_source.html  menudata.js  node_8h_source.html
Headers/html/search/: all_0.js  all_1.js  (+33 more)
Headers/latex/: annotated.tex  classMainWindow.tex  classMainWindow.tex.tmp  classMainWindow__coll__graph.dot  classReader.tex  classTcpClient.tex  classTcpClient__inherit__graph.dot  classTcpServer.tex  classTcpServer__coll__graph.dot  classmemoryManager.tex  classnode.tex  hierarchy.tex  refman.tex
Sources/: Reader.cpp  TcpClient.cpp  TcpServer.cpp  Textreciever.cpp  Textreciever.h  main.cpp  mainwindow.cpp  mainwindow.ui  memoryManager.cpp  node.cpp
